--- a/IOCPAutoUpdate/UpdateConfigClient.ini
+++ b/IOCPAutoUpdate/UpdateConfigClient.ini
@@ -4,7 +4,13 @@ SERVER_PORT=8888
 [USER]
 NAME=dta
 PWD=dta
-[PROGRAM]
-NAME=ClientTest
-PATH=D:\code\IOCPUpdate\
-VERSION=1.1.0
+[DTA]
+NAME=dta
+PATH=.\
+FILE_NAME=hello.mp4
+VERSION=10.1.10
+[FIRMWARE1]
+NAME=f1
+PATH=.\
+FILE_NAME=UpdateConfigServer.ini
+VERSION=10.1.12
